# aaa

./: .gitignore  Cargo.toml  Dockerfile  README.md  model.safetensors  settings.json
src/: main.rs
src/common/: mod.rs  net.rs  settings_json_format.rs  util.rs
tensors/models/: model.safetensors
