[package]
name = "aaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tch = {version = "0.13.0", features = ["download-libtorch"]}
anyhow = "1.0.71"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

rand = "0.8.5"
tch = "0.13.0"

[[bin]]
name = "dataset"
path = "src/bin/process_dataset.rs"
