[package]
name = "aaa"
version = "0.1.0"
edition = "2021"
default-run = "aaa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
csv = "1.2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
ring = "0.16"
hex = "0.4.3"
rand = "0.8.5"
tch = "0.13.0"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "bybit"
path = "src/bin/trade_on_bybit.rs"